--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.OldHabitsDieHard">
+        android:theme="@style/noAnimTheme">
         <activity
             android:name=".Login"
             android:exported="true" >
@@ -34,6 +34,9 @@
             android:exported="true"
             android:theme="@style/noAnimTheme"/>
         <activity android:name=".FollowingActivity"
+            android:exported="true"
+            android:theme="@style/noAnimTheme"/>
+        <activity android:name=".CreateAccount"
             android:exported="true"
             android:theme="@style/noAnimTheme"/>
 
