--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,12 @@
         <activity android:name=".EditProfileActivity"
             android:exported="true"
             android:theme="@style/noAnimTheme"/>
+        <activity android:name=".SearchActivity"
+            android:exported="true"
+            android:theme="@style/noAnimTheme"/>
+        <activity android:name=".FollowerActivity"
+            android:exported="true"
+            android:theme="@style/noAnimTheme"/>
 
     </application>
 
