--- a/android.yml
+++ b/android.yml
@@ -19,6 +19,11 @@ jobs:
         java-version: '11'
         distribution: 'adopt'
         cache: gradle
+        
+    -name: Update API key
+     env:
+       API_KEY: ${{AIzaSyBns7q37Dwkcf1mebm45WatgshyZiywTJQ}}
+     run: echo API_KEY="$API_KEY" > ./local.properties
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
