--- a/android.yml
+++ b/android.yml
@@ -22,5 +22,7 @@ jobs:
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+    - name: Make mock API kay
+      run: echo MAPS_API_KEY="AIzaSyBns7q37Dwkcf1mebm45WatgshyZiywTJQ" > ./local.properties
     - name: Build with Gradle
       run: ./gradlew build
