--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,7 @@ android {
         versionName "1.0"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        buildConfigField("String", "MAPS_API_KEY", getApiKey())
     }
 
     buildTypes {
@@ -72,4 +73,11 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
 
     implementation "io.grpc:grpc-okhttp:1.32.2"
+}
+
+String getApiKey() {
+    def propFile = rootProject.file("./local.properties")
+    def properties = new Properties()
+    properties.load(new FileInputStream(propFile))
+    return properties['MAPS_API_KEY']
 }
