--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
             android:required="false"/>
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="${MAPS_API_KEY}" />
+            android:value="AIzaSyBns7q37Dwkcf1mebm45WatgshyZiywTJQ" />
         <activity
             android:name=".Login"
             android:exported="true" >
@@ -52,6 +52,9 @@
             android:exported="true"
             android:theme="@style/noAnimTheme"/>
         <activity android:name=".FollowerActivity"
+            android:exported="true"
+            android:theme="@style/noAnimTheme"/>
+        <activity android:name=".FollowingUserActivity"
             android:exported="true"
             android:theme="@style/noAnimTheme"/>
 
